Task5/deploy/netpols/admin-api-allow.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: admin-back-end-api-allow
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: admin-front-end
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: admin-front-end-allow
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: admin-back-end-api
